profilelist1exp/unpackaged/objects/Master_Program_Setup__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check to keep Requirement Active.</description>
        <inlineHelpText>Check to keep Requirement Active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_Requirement_To__c</fullName>
        <description>Choose Global, Country or Region.</description>
        <inlineHelpText>Choose Global, Country or Region.</inlineHelpText>
        <label>Apply Requirement To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certification_Name__c</fullName>
        <description>Choose Competency Name</description>
        <inlineHelpText>Choose Competency Name</inlineHelpText>
        <label>Competency Name</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Data Center Networking</fullName>
                </value>
                <value>
                    <fullName>Cloud Client-Computing</fullName>
                </value>
                <value>
                    <fullName>Cloud Solutions</fullName>
                </value>
                <value>
                    <fullName>Client Solutions</fullName>
                </value>
                <value>
                    <fullName>Workstation</fullName>
                </value>
                <value>
                    <fullName>Microsoft Platform Management</fullName>
                </value>
                <value>
                    <fullName>Endpoint Management</fullName>
                </value>
                <value>
                    <fullName>Network Security</fullName>
                </value>
                <value>
                    <fullName>Identity and Access Management</fullName>
                </value>
                <value>
                    <fullName>Data Protection</fullName>
                </value>
                <value>
                    <fullName>PS Series Storage Deployment</fullName>
                </value>
                <value>
                    <fullName>SC Series Storage Deployment</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>Big Data and Analytics</fullName>
                </value>
                <value>
                    <fullName>Solutions</fullName>
                </value>
                <value>
                    <fullName>EMEA-EM - Preferred Partner</fullName>
                </value>
                <value>
                    <fullName>Onboarding - LA English</fullName>
                </value>
                <value>
                    <fullName>Onboarding - LA Portuguese</fullName>
                </value>
                <value>
                    <fullName>Onboarding - LA Spanish</fullName>
                </value>
                <value>
                    <fullName>Client Deployment Services Competency</fullName>
                </value>
                <value>
                    <fullName>PowerEdge Servers Deployment Services Competency</fullName>
                </value>
                <value>
                    <fullName>Client Data Security</fullName>
                </value>
                <value>
                    <fullName>OEM Solutions</fullName>
                </value>
                <value>
                    <fullName>Modular Infrastructure Deployment Services Competency</fullName>
                </value>
                <value>
                    <fullName>Entry Level Storage</fullName>
                </value>
                <value>
                    <fullName>Campus Networking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompetencyName1__c</fullName>
        <label>CompetencyName1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompetencyName2__c</fullName>
        <label>CompetencyName2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competency_F1Name__c</fullName>
        <label>Competency Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competency_FName__c</fullName>
        <description>Choose Competency Name</description>
        <inlineHelpText>Choose Competency Name</inlineHelpText>
        <label>Competency Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competency_Name2__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(CompetencyName1__c, &apos;AND;&apos;, &apos;;&apos;), &apos;OR;&apos;, &apos;,&apos;), &quot;(&quot;, &quot;&apos;&quot;), &quot;)&quot;, &quot;&apos;&quot;)</formula>
        <label>Competency Name2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competency_Name__c</fullName>
        <description>Choose Competency Name</description>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(CompetencyName1__c, &apos;AND;&apos;, &apos;AND&apos;), &apos;OR;&apos;, &apos;OR&apos;), &quot;&apos;&quot;, &quot;&quot;)</formula>
        <inlineHelpText>Choose Competency Name</inlineHelpText>
        <label>Competency Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Choose Country</description>
        <inlineHelpText>Choose Country</inlineHelpText>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Master Program Setups</relationshipLabel>
        <relationshipName>Master_Program_Setups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DuplicateMasterName__c</fullName>
        <label>DuplicateMasterName</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Master_Program_Name__c</fullName>
        <label>Master Program Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_ToolTip__c</fullName>
        <defaultValue>&apos;Enter a value which will be updated with “Master Program Name – Apply Requirement To” on saving&apos;</defaultValue>
        <description>Tool tip for Master Program Setup Name</description>
        <label>&lt;font color=&quot;#fff&quot;&gt;</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Choose Region. Duplicate value of Region should not be allowed.</description>
        <inlineHelpText>Choose Region.</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apply_Requirement_To__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                    <default>true</default>
                    <label>--None--</label>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>EMEA-EM</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Master Program Setup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Master_Program_Name__c</columns>
        <columns>Competency_FName__c</columns>
        <columns>Apply_Requirement_To__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Master Program Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Program Setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CountryBlank_validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(OR(AND(ISPICKVAL(Apply_Requirement_To__c , &quot;Region&quot;), ISPICKVAL( Region__c , &apos;&apos;)),AND(ISPICKVAL(Apply_Requirement_To__c , &quot;Region&quot;), TEXT(Region__c) &lt;&gt; &apos;&apos;) ,AND(ISPICKVAL(Apply_Requirement_To__c , &quot;Global&quot;))),IF( LEN(Country__c) &gt;0, true, false),false)</errorConditionFormula>
        <errorDisplayField>Country__c</errorDisplayField>
        <errorMessage>The Country field should be blank when the Apply Requirement To is &apos;Region&apos; or &apos;Global&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Country_Validation</fullName>
        <active>true</active>
        <description>If &apos;Apply Requirement To&apos; is chosen as country, its mandatory to choose a country.</description>
        <errorConditionFormula>AND(ISPICKVAL(Apply_Requirement_To__c , &apos;Country&apos;),ISBLANK ( Country__c ))</errorConditionFormula>
        <errorDisplayField>Country__c</errorDisplayField>
        <errorMessage>Choose a Country</errorMessage>
    </validationRules>
</CustomObject>